Working backend for mobile development and cleam UI frontend